# KotoOS

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
apps/: apps.json
apps/koto_blocks/: app.json  icon.kicon
apps/kotomines/: app.json  icon.kicon
apps/kotorogue/: app.json
apps/kotorun/: app.json  icon.kicon
apps/kotoshogi/: app.json  icon.kicon  icon.pbm
apps/kotosnake/: app.json  icon.kicon
apps/memo/: app.json  icon.kicon  memo.kbc.asm
apps/sokoban/: app.json
apps/weather/: README.md  app.json  icon.kicon
assets/fonts/: LICENSE_J  (+1 more)
docs/: ISSUES_kotogfx.md  ISSUES_main.md  README.md
harness/: README.md  arena_future_host.rs  asset_pipeline.py  audio_residency_host.rs  audio_scratch_host.rs  build_apps.py  check_all.py  check_app_fetch_budget.py  check_app_fetch_tls_feasibility.py  check_app_fetch_tls_probe.py  check_arena_future.py  check_audio_residency.py  check_audio_residency_memory.py  check_audio_scratch.py  check_budgets.py  check_embedded.py  check_golden_frames.py  check_network_service_budget.py  check_project.py  check_wifi_residency_layout.py  dev_app.py  mplus_to_kfont.py
sdk/: koto_ui.koto
src/koto-audio/crates/koto-audio/: Cargo.toml
src/koto-audio/crates/koto-audio-tools/: Cargo.toml
src/koto-audio/crates/koto-audio-tools/src/: lib.rs  mml.rs
src/koto-audio/crates/koto-audio/examples/: sequence_game_sounds.rs
src/koto-audio/crates/koto-audio/src/: asset.rs  backend.rs  builtin_drums.rs  builtin_drums_generated.rs  builtin_drums_sldpcm4_generated.rs  clip.rs  counters.rs  decoder.rs  event.rs  hostcall.rs  lib.rs  mixer.rs  owned_clip.rs  policy.rs  runtime_cue.rs  sequence.rs  service.rs  source.rs  streaming_clip.rs
src/koto-audio/crates/koto-audio/src/backend/: mock.rs  picocalc.rs  sim.rs
src/koto-audio/crates/koto-audio/src/codec/: mod.rs  pcm16.rs  sldpcm4.rs
src/koto-core/: Cargo.toml
src/koto-core/src/: audio.rs  boot_splash.rs  config.rs  config_ui.rs  config_wifi_ui.rs  dirty_tiles.rs  fetch.rs  font.rs  fs.rs  hal.rs  ime.rs  json.rs  keymap.rs  kotodos.rs  kpa.rs  layout.rs  lib.rs  memo.rs  memo_ime.rs  mqtt.rs  net.rs  net_ui.rs  package.rs  psram.rs  raster.rs  render.rs  shell.rs  skk.rs  time.rs  ui_abi.rs  ui_input.rs  ui_render.rs  ui_session.rs  vault.rs  wifi_secrets.rs
src/koto-core/tests/: ui_render.rs
src/koto-game2d/: Cargo.toml
src/koto-game2d/src/: lib.rs
src/koto-gfx/: Cargo.toml
src/koto-gfx/src/: budget.rs  convert.rs  derive.rs  diag_profile.rs  dirty.rs  font.rs  layer.rs  lib.rs  observe.rs  paint.rs  raster.rs  rect.rs  repaint.rs  shadow.rs  stats.rs
src/koto-gfx/tests/: present_attribution.rs
src/koto-pico/: Cargo.toml  README.md  build.rs  link-rp235x.x  memory-rp235xa.x
src/koto-pico/bringup/archive/: README.md  blink_cdc.rs  blink_cdc_pico_w.rs  bootstrap.rs  device_probe.rs  keyboard_matrix.rs
src/koto-pico/src/: dashboard.rs  keyboard.rs  lcd.rs  lib.rs  pins.rs  power.rs  psram.rs  psram_dma.rs  psram_ext.rs
src/koto-pico/src/board/: mod.rs  picocalc.rs  picocalc_pico.rs  picocalc_pico2w.rs  picocalc_picow.rs
src/koto-pico/src/firmware/: app_host.rs  app_render.rs  app_runtime.rs  arena_future.rs  audio.rs  audio_cues.rs  audio_cues_generated.rs  audio_residency.rs  audio_scratch.rs  config.rs  config_render.rs  config_store.rs  diag.rs  display_service.rs  fetch_https.rs  fetch_tls_adapter.rs  fetch_tls_verifier.rs  fetch_tls_workspace.rs  mod.rs  network.rs  power.rs  resident.rs  secret_store.rs  shell_prefs.rs  shell_render.rs  spi_bench.rs  splash_render.rs  stack_canary.rs  stack_switch.rs  storage.rs  stream_soak.rs  wifi_residency.rs
src/koto-psram/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  memory.x
src/koto-psram/.cargo/: config.toml
src/koto-psram/docs/: THIRD_PARTY_NOTICES.md  architecture.md  diagnostics.md  fast-read-clkdiv2.md  high-throughput-pio-plan.md  koto-psram-design.md  qpi-transaction-dma-plan.md  release-checklist.md
src/koto-psram/examples/: rp2040_embassy_chunk_bench.rs  rp2040_embassy_clkdiv_sweep.rs  rp2040_embassy_compare.rs  rp2040_embassy_dma_memcpy_probe.rs  rp2040_embassy_dma_pac_memcpy_probe.rs  rp2040_embassy_fast_clkdiv2_validation.rs  rp2040_embassy_payload_path_bench.rs  rp2040_embassy_smoke.rs  rp2040_embassy_transaction_pio_diag.rs  rp2040_uart_hello.rs
src/koto-psram/src/: addr.rs  bus.rs  config.rs  device.rs  error.rs  lib.rs  protocol.rs  region.rs  state.rs
src/koto-psram/src/diag/: compare.rs  mod.rs  probe.rs  stats.rs  sweep.rs
src/koto-psram/src/pio/: blocking.rs  dma.rs  mod.rs  word_stream.rs
src/koto-psram/src/rp2040_embassy/: boundary.rs  diagnostics.rs  embassy_hal.rs  mod.rs  pac_dma.rs  programs.rs  tests.rs  transaction_pio.rs
src/koto-psram/src/rp2040_embassy/transaction_pio/: diagnostics.rs
src/koto-sim/: Cargo.toml
src/koto-sim/src/: audio.rs  framebuffer.rs  host_fs.rs  koto_blocks_audio.rs  lib.rs  main.rs  manifest.rs  ui_gallery.rs  window.rs
src/koto-sim/src/runtime/: audio_capture.rs  budget.rs  config_store.rs  error.rs  fake_fetch.rs  fake_mqtt.rs  fake_network.rs  host.rs  inspector.rs  memo_validation.rs  mod.rs  orchestration.rs  package.rs  render.rs  save_data.rs  scenario.rs  session.rs  shell_prefs.rs  sim_vault.rs  tests.rs
src/koto-sim/tests/: fixture_runner.rs  koto_config.rs  koto_fetch_service.rs  koto_json_service.rs  koto_mqtt_service.rs  koto_network_service.rs  koto_time_service.rs  koto_ui_app_gallery.rs  koto_ui_file_note.rs  koto_vault_service.rs  koto_weather_service.rs  splash_golden.rs  ui_gallery.rs
src/koto-vm/: Cargo.toml
src/koto-vm/src/: lib.rs
src/koto-vm/tests/: interpreter.rs
tools/: build-rp2350a.ps1  png_full_color_image.py
tools/koto-app-scaffold/: Cargo.toml
tools/koto-app-scaffold/src/: lib.rs  main.rs
tools/koto-audio-gen/: Cargo.toml
tools/koto-audio-gen/src/: lib.rs  main.rs
tools/koto-mml/: Cargo.toml
tools/koto-mml/src/: lib.rs  main.rs
tools/kpa-packer/: Cargo.toml
tools/kpa-packer/src/: lib.rs  main.rs
(+744 files in other folders)
