[package]
name = "koto-app-scaffold"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
koto-core = { path = "../../src/koto-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
koto-compiler = { path = "../koto-compiler" }
koto-sim = { path = "../../src/koto-sim" }
