[package]
name = "kpa-packer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
koto-audio = { path = "../../src/koto-audio/crates/koto-audio", features = ["sldpcm4-drums"] }
koto-core = { path = "../../src/koto-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
